--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,6 @@ install:
   - wget -q -O - https://github.com/Masterminds/glide/releases/download/v0.12.3/glide-v0.12.3-linux-amd64.tar.gz | tar xvz
   - linux-amd64/glide install
 script:
-  - make test
+  - make test-coverage
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
