--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,9 @@ go:
   - 1.9
 sudo: false
 install:
-  - wget -q -O - https://github.com/Masterminds/glide/releases/download/v0.12.3/glide-v0.12.3-linux-amd64.tar.gz | tar xvz
-  - linux-amd64/glide install
+  - wget -q https://github.com/golang/dep/releases/download/v0.3.2/dep-linux-amd64 -O dep
+  - chmod +x dep
+  - ./dep ensure
 script:
   - make test-coverage
 after_success:
