--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,30 +1,6 @@
 version: 2.0
 
 jobs:
-  "go-1.9":
-    docker:
-      - image: circleci/golang:1.9
-    working_directory: /go/src/github.com/utahta/go-cronowriter
-    steps:
-      - checkout
-      - run: go get github.com/golang/dep/cmd/dep
-      - run: make install
-      - run:
-          name: Run tests
-          command: make test
-
-  "go-1.10":
-    docker:
-      - image: circleci/golang:1.10
-    working_directory: /go/src/github.com/utahta/go-cronowriter
-    steps:
-      - checkout
-      - run: go get github.com/golang/dep/cmd/dep
-      - run: make install
-      - run:
-          name: Run tests
-          command: make test
-
   "go-1.11":
     docker:
       - image: circleci/golang:1.11
@@ -51,11 +27,23 @@ jobs:
           name: Run tests
           command: make test
 
+  "go-1.13":
+    docker:
+      - image: circleci/golang:1.13
+        environment:
+          GO111MODULE=on
+    working_directory: /go/src/github.com/utahta/go-cronowriter
+    steps:
+      - checkout
+      - run: make mod
+      - run:
+          name: Run tests
+          command: make test
+
 workflows:
   version: 2
   build:
     jobs:
-      - "go-1.9"
-      - "go-1.10"
       - "go-1.11"
       - "go-1.12"
+      - "go-1.13"
